<resources>

    <string name="google_api_key" translatable="false">AIzaSyCB--f_reP8v262JnkscG1MCw6eT8nsOC4 </string>
    <string name="app_name">FranMorenoAlc</string>

    <string name="adjustments">User settings</string>
    <string name="btnRegistro">Registration</string>
    <string name="btnPlay">Wormy</string>
    <string name="btnPlay2">Bonk</string>
    <string name="btnRank">Ranking</string>
    <string name="btnAdjustments">Adjustments</string>
    <string name="btnQuant">Who we are</string>

    <string name="hintPlay">"PLAY"</string>
    <string name="random">"RANDOM"</string>
    <string name="send">"SEND"</string>


    <string name="hintRank">RANKING</string>

    <string name="currentPlayer">current player</string>
    <string name="yourName">Enter your name</string>
    <string name="uploadImage">Camera</string>
    <string name="uploadGallery">Gallery</string>
    <string name="deleteImage">Delete image</string>
    <string name="saveSettings">Save settings</string>
    <string name="unregister">Delete your account</string>

    <string name="dialogTitle">Photo options</string>
    <string name="buttonUpload">Gallery</string>
    <string name="buttonCam">Use camera</string>
    <string name="buttonDelete">Delete photo</string>
    <string name="actionCancel" translatable="false">OK</string>


    <string name="textName">Fran Moreno Alcaraz</string>
    <string name="textViewExplica">Currently studying DAM at Stucom academy, Barcelona. \n
    This is my first Android project, work in progress.</string>
    <string name="gmapButton">Stucom gmap</string>
    <string name="title_activity_maps" translatable="false">Map</string>


    <string name="registroAct">New registry</string>
    <string name="mailHint">Enter your mail</string>
    <string name="btnSendMail">Send</string>
    <string name="verifyText">Please, enter your mail to receive a verification code:</string>
    <string name="verifyHint">Your code</string>
    <string name="btnVerify">Send</string>
    <string name="codeText">Now enter the received code on your inbox:</string>
    <string name="yourMail">Enter your mail</string>

    <string name="notRegistered">You are not registered</string>
    <string name="someFunctions">Some functions may not work</string>
    <string name="notAllowed">Option not allowed</string>
    <string name="registration">You should register</string>
    <string name="register">Register now</string>
    <string name="later">Later</string>

    <string name="writeSomething">Write something</string>

    <string name="dataSaved">Data saved</string>
    <string name="deleteAccount">Delete account</string>
    <string name="confirmDelete">Please confirm you want to delete</string>
    <string name="sure">Yes, sure</string>
    <string name="notSure">Mmmm... not yet</string>
    <string name="deleteType">Select type of delete</string>
    <string name="deleteAll">Delete everything</string>
    <string name="unregisterDel">Only unregister</string>
    <string name="deleteSuccess">Account deleted</string>
    <string name="deleteMsg">All your data was deleted from the API</string>
    <string name="unregisterSuccess">Unregistered</string>
    <string name="unregisterMsg">Register with same mail to recover your data</string>
    <string name="retMenu">Return menu</string>

    <string name="app_name2">Wormy</string>
    <string name="new_game">New Game</string>
    <string name="you_lost">You lost!</string>

    <string name="new_game2">New game</string>
    <string name="resume_game">Resume game</string>



</resources>
