<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AdjustmentsActivity">


    <TextView
        android:id="@+id/adjustments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjustments"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/currentPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currentPlayer" />

        <EditText
            android:id="@+id/yourMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/yourMail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourName" />

        <EditText
            android:id="@+id/yourName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/yourName"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/yourPhoto"
            android:layout_width="229dp"
            android:layout_height="125dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourMail"
            app:srcCompat="@drawable/your_photo" />

        <Button
            android:id="@+id/deleteImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteImage" />

        <Button
            android:id="@+id/uploadImage"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:baselineAligned="false"
            android:text="@string/uploadImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/uploadGallery"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:baselineAligned="false"
            android:text="@string/uploadGallery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/saveSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveSettings" />

        <Button
            android:id="@+id/unregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unregister" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>